# modelrecorder

./: .gitignore  CMakeLists.txt  README.md  configure.sh  main.cpp
lib/3dtemplate/: CMakeLists.txt
lib/3dtemplate/include/: Attribute.h  Mesh.h  Model.h  RenderOptions.h  Scene.h  Texture.h  glCommon.h  trackball.h
lib/3dtemplate/lib/glad/: CMakeLists.txt
lib/3dtemplate/lib/glad/include/glad/: glad.h
lib/3dtemplate/lib/glad/src/: glad.c
lib/3dtemplate/mesh/: Mesh.cpp
lib/3dtemplate/model/: Attribute.cpp  Model.cpp  Scene.cpp  Texture.cpp
lib/3dtemplate/renderers/: VPHandler.cpp
lib/3dtemplate/src/: Attribute.cpp  Mesh.cpp  Model.cpp  Model.h  Renderer.h  Scene.cpp  Texture.cpp  Texture.h  TrackballCamera.cpp  VPHandler.cpp  VPHandler.h  glUtils.h
lib/3dtemplate/trackball/: trackball.cpp
lib/stb/: CMakeLists.txt  rgbhsv.h  stb_image.h  stb_image_wrapper.h  stb_image_write.h
lib/tinyobjloader/: CMakeLists.txt
lib/utils/: CMakeLists.txt  contains.h  glmUtils.h  io.h
renderers/: PositioningRenderer.cpp  PositioningRenderer.h
shaders/: view_main_fragment.glsl  view_main_vertex.glsl
